WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114347
[GTK] Notify WebProcess in WebKitURISchemeRequest when we fail to read the user InputStream
https://bugs.webkit.org/show_bug.cgi?id=114347
Summary
[GTK] Notify WebProcess in WebKitURISchemeRequest when we fail to read the us...
Manuel Rego Casasnovas
Reported
2013-04-10 03:49:53 PDT
Until now we were finishing the request without notifying the WebProcess when we fail to read the user InputStream while managing a WebKitURISchemeRequest. In WebKitURISchemeRequest::webkitURISchemeRequestReadCallback() it's marked as FIXME: static void webkitURISchemeRequestReadCallback(GInputStream* inputStream, GAsyncResult* result, WebKitURISchemeRequest* schemeRequest) { GRefPtr<WebKitURISchemeRequest> request = adoptGRef(schemeRequest); gssize bytesRead = g_input_stream_read_finish(inputStream, result, 0); // FIXME: notify the WebProcess that we failed to read from the user stream. if (bytesRead == -1) { webkitWebContextDidFinishURIRequest(request->priv->webContext, request->priv->requestID); return; } [...] }
Attachments
Patch
(2.13 KB, patch)
2013-04-10 04:03 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch
(4.38 KB, patch)
2013-04-11 23:08 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch
(4.31 KB, patch)
2013-04-11 23:31 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch
(4.31 KB, patch)
2013-05-27 05:11 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2013-04-10 04:03:14 PDT
Created
attachment 197242
[details]
Patch
Martin Robinson
Comment 2
2013-04-10 09:34:44 PDT
Comment on
attachment 197242
[details]
Patch You might add a few words about what kind of situation motivates this change.
Carlos Garcia Campos
Comment 3
2013-04-10 10:30:49 PDT
Comment on
attachment 197242
[details]
Patch We also need unit tests.
WebKit Commit Bot
Comment 4
2013-04-10 11:08:35 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Manuel Rego Casasnovas
Comment 5
2013-04-11 23:08:06 PDT
Created
attachment 197719
[details]
Patch
Carlos Garcia Campos
Comment 6
2013-04-11 23:20:06 PDT
Comment on
attachment 197719
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=197719&action=review
> Source/WebKit2/UIProcess/API/gtk/tests/TestWebKitWebContext.cpp:235 > + g_assert_cmpstr(test->m_error->message, ==, "Stream is already closed");
Don't check the message in this case, this error comes from glib and the message might change making this test fail. Checking the domain and error code is enough.
Manuel Rego Casasnovas
Comment 7
2013-04-11 23:31:39 PDT
Created
attachment 197720
[details]
Patch
Manuel Rego Casasnovas
Comment 8
2013-05-07 02:23:36 PDT
This is ready for owner review as
bug #94316
has already landed.
Manuel Rego Casasnovas
Comment 9
2013-05-27 05:11:37 PDT
Created
attachment 202972
[details]
Patch Patch still applies and works in trunk. Re-uploading it to check EWSs.
Carlos Garcia Campos
Comment 10
2013-05-27 06:10:18 PDT
Comment on
attachment 202972
[details]
Patch Thanks!
WebKit Commit Bot
Comment 11
2013-05-27 06:31:51 PDT
Comment on
attachment 202972
[details]
Patch Clearing flags on attachment: 202972 Committed
r150753
: <
http://trac.webkit.org/changeset/150753
>
WebKit Commit Bot
Comment 12
2013-05-27 06:31:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug