[GTK] Notify WebProcess in WebKitURISchemeRequest when we fail to read the user InputStream https://bugs.webkit.org/show_bug.cgi?id=114347

Patch by Manuel Rego Casasnovas <rego@igalia.com> on 2013-05-27
Reviewed by Carlos Garcia Campos.

While processing a WebKitURISchemeRequest if there is any error reading
the InputStream provided by the user (for example the stream is already
closed) we have to notify the WebProcess that the request has failed.

* UIProcess/API/gtk/WebKitURISchemeRequest.cpp:
(webkitURISchemeRequestReadCallback): Get the error from
g_input_stream_read_finish() and use it to call
webkit_uri_scheme_request_finish_error() in order to finish the failing
WebKitURISchemeRequest properly.
* UIProcess/API/gtk/tests/TestWebKitWebContext.cpp:
(testWebContextURIScheme): Modify test to check the new situation using
an already closed InputStream.

Canonical link: https://commits.webkit.org/135121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150753 268f45cc-cd09-0410-ab3c-d52691b4dbfc